--- a/src/less/_monaca_header.less
+++ b/src/less/_monaca_header.less
@@ -11,6 +11,7 @@
   margin-bottom: @header-height;
 }
 
+
 #header-monaca-inner {
   width: @width;
   margin: 0px auto;
@@ -126,6 +127,9 @@ ul#header-monaca-navi > li:last-child ul.header-monaca-navi-sub-menu {
 }
 
 @media screen and (max-width: @width) {
+  #header-monaca {
+    margin-bottom: 0px;
+  }
   #header-monaca-navi {
     display: none;
   }
